Fix README: use nrepl.sh script for dev setup
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>